# agentic-ai-major-project

./: .gitignore  llm_automation.py  project-setup.md  requirements.txt  run-first.sh  test_error_scenario.py
agentic_ai_crew/: .env.example  README.md  pyproject.toml
agentic_ai_crew/src/agentic_ai_crew/: app.py  crew.py  main.py
agentic_ai_crew/src/agentic_ai_crew/config/: agents.yaml  tasks.yaml
agentic_ai_crew/src/product_price_researcher/: app.py  crew.py  tracker.py
agentic_ai_crew/src/product_price_researcher/agents/: agents.yaml  change_detector.py  price_availability_extractor.py  pricing_advisor.py  product_query_generator.py  serper_search_agent.py  tasks.yaml
agentic_ai_crew/src/product_price_researcher/tools/: __init__.py  product_price_search_tool.py
ai_news/: .gitignore  pyproject.toml
ai_news/src/ai_news/: crew.py  main.py
ai_news/src/ai_news/config/: tasks.yaml
coding_assistant/: chat.py
research_buddy/: crew.py
research_buddy/config/: agents.yaml  tasks.yaml
roadmap_planner/: crew.py
roadmap_planner/config/: agents.yaml  tasks.yaml
streamlit_interface/: Home.py  👋_Home.py
streamlit_interface/pages/: 1_🧑‍🔬_Research_Buddy.py  2_👨‍💻_Code_Buddy.py  3_🧮_Algo_Buddy.py  4_📖_Road_Map_Buddy.py
