[project]
name = "agentic_ai_crew"
version = "0.1.0"
description = "agentic-ai-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
agentic_ai_crew = "agentic_ai_crew.main:run"
run_crew = "agentic_ai_crew.main:run"
train = "agentic_ai_crew.main:train"
replay = "agentic_ai_crew.main:replay"
test = "agentic_ai_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
